--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   uuid: ^3.0.5
   device_preview: ^1.0.0
   infinite_scroll_pagination: ^3.1.0
+  dio: ^4.0.4
+  email_validator: ^2.0.1
+  flutter_form_builder: ^7.1.0
+  form_builder_validators: ^7.4.0
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
