--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   email_validator: ^2.0.1
   flutter_form_builder: ^7.1.0
   form_builder_validators: ^7.4.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
