--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_form_builder: ^7.1.0
   form_builder_validators: ^7.4.0
   flutter_spinkit: ^5.1.0
+  dartz: ^0.10.1
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
